force-app/main/default/objects/Order_Item__c/fields/Item_count__c.field-meta.xml
<CustomField>
    <fullName>Item_count__c</fullName>
    <label>Item count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>