force-app/main/default/objects/Order_Item__c/fields/Last_price__c.field-meta.xml
<CustomField>
    <fullName>Last_price__c</fullName>
    <label>Last price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>