force-app/main/default/objects/Order_Item__c/fields/Price_changed__c.field-meta.xml
<CustomField>
    <fullName>Price_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price changed</label>
    <type>Checkbox</type>
</CustomField>