force-app/main/default/objects/Order_Item__c/fields/Product_External__c.field-meta.xml
<CustomField>
    <fullName>Product_External__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product External</label>
    <referenceTo>ProductExternal__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>