force-app/main/default/objects/Order_Item__c/fields/Product_price__c.field-meta.xml
<CustomField>
    <fullName>Product_price__c</fullName>
    <formula>Product_External__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>