force-app/main/default/objects/Order_Item__c/validationRules/Not_enough_stock_available.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_enough_stock_available</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
				AND(ISNEW(),Item_count__c &gt; Product_External__r.Count__c),
				Item_count__c &gt; Product_External__r.Count__c
)</errorConditionFormula>
    <errorMessage>Not enough stock available. Please reduce the quantity.</errorMessage>
</ValidationRule>